# AI-System-Performance-Lab

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  attention_memory_bound.cu  bench_flash_attn.cu  cp_async_pipeline.cu  hbm_pointer_chasing.cu
cmake/: NVCCFlags.cmake
docker/: README.md
docs/results/: perf_table.md
examples/: CMakeLists.txt
examples/01_cuda_basics/: 01_fatbin_inspect.sh  01_hello_modern.cu  02_hardware_query.cu  03_grid_mapping.cu  04_warp_divergence.cu  05_inspect_asm.sh  05_kernel_structure.cu  06_nvrtc_jit.cpp  07_inspect_sass.sh  07_memory_spaces.cu  08_async_pipeline.cu  08_profile_nsys.sh  09_debug_and_sanitizer.cu  09_run_sanitizer.sh  10_profile_roofline.sh  10_roofline_demo.cu  README.md
examples/02_memory_optim/: 01_global_mem_bandwidth.cu  01_profile_bandwidth.sh  02_profile_banks.sh  02_shared_mem_bank_conflict.cu  README.md
examples/03_compute_primitives/: README.md
examples/04_dl_systems/: README.md
include/aspl/common/: cuda_utils.h
include/aspl/ops/: ops.h
include/aspl/profiler/: profiler.h
python/: README.md
python/aspl/: __init__.py
python/csrc/: README.md  module.cpp
scripts/: README.md  dump_sass.sh  parse_roofline.py  plot_roofline.py  profile_ncu.sh
src/kernels/cann/: cann_placeholder.cu
src/kernels/cuda/math/: reduction_placeholder.cu
src/ops/: ops_placeholder.cpp
src/utils/: dummy.cpp  logger.cpp
tests/cuda/: test_reduction.cu
tests/python/: README.md
